# diregram

./: .gitignore  README.md  clear-database-simple.html  clear-database.js  verify_diregram.py  verify_nexusmap.py
.cursor/rules/: vision-paint-model.mdc  vision-tldraw-invariants.mdc
.github/workflows/: desktop-release.yml
.tmp/: web_components_index.txt  web_lib_index.txt
Plan/: feature-plan-templates-links-embeds.md
collab-server/: README.md  index.js  package-lock.json  package.json
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main-capability.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  rag.rs  sync.rs
docling-service/: README.md  app.py  requirements.txt
docs/: markdown-file-formats.md
mcp-server-nexusmap-rag/: README.md  package.json
mcp-server-nexusmap-rag-hosted/: README.md  package-lock.json  package.json
mcp-server-nexusmap-rag-hosted/scripts/: sync-authorized-keys.sh
mcp-server-nexusmap-rag-hosted/src/: index.js  stdio.js
mcp-server-nexusmap-rag/src/: index.js
web/: AI_STABILITY_NOTES.md  README.md  env.example  package-lock.json  package.json  rag_migration.sql  schema.sql  supabase_migration.sql
web/.codex-screens/: diregram_check.js
web/app/: design-system-v2.css  globals.css  layout.tsx  page.tsx  suppress-params-warning.ts  vision-design-system.css  vision-style-panel.css
web/components/: AccessPeopleEditor.tsx  AppHeader.tsx  AuthStatus.tsx  (+41 more)
(+613 files in other folders)
