[package]
name = "diregram_sync"
version = "0.1.0"
description = "Diregram desktop sync app"
authors = ["Diregram"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

keyring = "3"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
once_cell = "1"

